签名校验 缩略服务

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "torophp/torophp": "dev-master"
+        "torophp/torophp": "dev-master",
+        "masterexploder/phpthumb": ">2.0"
     }
 }
